   pen.glvertex4f,            pen.glvertex4i,      pen.glvertex4s,
   pen.glrotated,             pen.glflush,         pen.glfinish,
   pen.glcolor3b,             pen.glcolor3d,       pen.glcolor3f,
   pen.glcolor3i,             pen.glcolor3s,       pen.glcolor3ub,
   pen.glcolor3ui,            pen.glcolor3us,      pen.glcolor4b,
   pen.glcolor4d,             pen.glcolor4f,       pen.glcolor4i,
   pen.glcolor4s,             pen.glcolor4ub,      pen.glcolor4ui,
   pen.glcolor4us,            pen.glblendfunc,     pen.glpushmatrix,
   pen.glpopmatrix,           pen.gltranslatef,    pen.glrotatef,
   pen.glgeterror,            pen.glortho,         pen.glrasterpos2d,
   pen.glrasterpos2f,         pen.glrasterpos2i,   pen.glrasterpos2s,
   pen.glrasterpos3d,         pen.glrasterpos3f,   pen.glrasterpos3i,
   pen.glrasterpos3s,         pen.glrasterpos4d,   pen.glrasterpos4f,
   pen.glrasterpos4i,         pen.glrasterpos4s,

3. New: OpenGL extension functions
   pen.gl_new_screen_canvas,  pen.glcolor3,        pen.glcolor4

4. New: get_immediate.  Not fully working, doesn't support files. [testing needed] [docs needed].

5. New: exception declarations.  "exception" may be followed by "with" and include a default message and use for a status code.  The extension is not allowed with pragma ada_95. [testing needed]

4. New: exception handlers accept exception names. [testing needed] 

5. New: raise command (beside re-raising in handlers).  The exception may be followed by "with" and a message, as in Ada 2005.  The extension is not allowed with pragma ada_95. [testing needed] 

6. New: exceptions package.  exceptions.exception_name, exceptions.exception_info, exceptions.exception_status_code.

7. New: style issue: large indentations now reported as an error. 

8. New: environment variable TABSIZE can change the number of spaces for a tab from the default 8 to a different number.

9. New chains package.  chains.chain_count, chains.chain_context, chains.in_chain. [docs needed]
